LIVY-135. Add Scala-based tests to integration suite.
These tests are mostly targeted at making sure that Scala classes
(standard library types, case classes, etc) are properly serialized
by the Livy RPC code. They also show a little bit how to use the
Livy API in Scala, although it's not really optimal right now.

I also moved around some code in the test suite so that certain
errors don't cause subsequent tests to throw nasty exceptions,
causing them to be skipped instead.

Closes #125